k8s/homepage/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: homepage
    namespace: homepage 
    labels:
        app.kubernetes.io/name: homepage
spec:
    selector:
        matchLabels:
            app.kubernetes.io/name: homepage
    template:
        metadata:
            labels:
                app.kubernetes.io/name: homepage
        spec:
            serviceAccountName: homepage
            automountServiceAccountToken: true
            dnsPolicy: ClusterFirst
            containers:
              - name: homepage
                image: "ghcr.io/gethomepage/homepage:latest"
                imagePullPolicy: Always
                ports:
                  - name: http
                    containerPort: 3000
                    protocol: TCP
                volumeMounts:
                    - name: homepage-config
                      mountPath: /app/config
                    - name: logs
                      mountPath: /app/config/logs
            volumes:
                - name: homepage-config
                  configMap:
                      name: homepage
                - name: logs
                  emptyDir: {}
