k8s/homepage/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage 
spec:
  entryPoints: [https]
  routes:
  - kind: Rule
    match: Host(`hub.pycrs.cz`) 
    services:
    - kind: Service
      name: homepage
      port: http
  tls: {}
